force-app/main/default/objects/Project__c/fields/Ticket_Count__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Count__c</fullName>
    <description>Rollup Summary with Tickets</description>
    <label>Ticket Count</label>
    <summaryForeignKey>Tickets__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>